# eisenhower-tasks-rust

./: .gitignore  README.md  cliff.toml  package.json
.github/workflows/: publish.yml
src/: i18n.js  index.html  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  logo.af
src-tauri/src/: lib.rs  main.rs
