[package]
name = "eisenhower-tasks-rust"
version = "1.0.0"
edition = "2021"

[lib]
name = "eisenhower_tasks_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
